tests/run/error_spawn_extern.out
tests/run/error_spawn_extern.em:7:9: error: cannot 'spawn' a foreign (extern "c") function
